--- a/app/src/main/res/layout/abaut.xml
+++ b/app/src/main/res/layout/abaut.xml
@@ -13,28 +13,14 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_marginTop="-1dp"
+        android:autoLink="web|phone"
         android:background="@null"
         android:enabled="true"
         android:focusable="auto"
         android:gravity="center"
-        android:textIsSelectable="true"
         android:text="@string/direct_link_dropbox"
+        android:textIsSelectable="true"
         android:textSize="13sp" />
-
-    <Button
-        android:id="@+id/donat"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:background="@drawable/donat"
-        android:onClick="donat"
-        android:scaleType="fitCenter"
-        android:src="@drawable/donat" />
-
 
 
 </RelativeLayout>
